--- a/src/app/(client)/globals.css
+++ b/src/app/(client)/globals.css
@@ -72,7 +72,7 @@
 
 .swiper-button-next, .swiper-button-prev{
 
-    @apply text-black hover:text-black-hover transition-colors duration-75 scale-75 lg:scale-100 drop-shadow-[0_5px_5px_#ffff]
+    @apply text-black hover:text-black-hover transition-colors duration-75 scale-75 drop-shadow-[0_5px_5px_#ffff]
 }
 
 .swiper-button-next{
@@ -81,6 +81,10 @@
 
 .swiper-button-prev{
     @apply left-0
+}
+
+.ant-image-preview-operations{
+    @apply bg-black
 }
 
 /* -- Custom Classes ------------------------------------------------------- */
