--- a/src/app/(client)/globals.css
+++ b/src/app/(client)/globals.css
@@ -16,6 +16,7 @@
 
     html{
         scroll-behavior: smooth;
+        @apply bg-black
     }
 
     body{
@@ -68,7 +69,7 @@
 
 ::-webkit-scrollbar-track , ::-webkit-scrollbar-track-piece{
 
-    @apply bg-transparent
+    @apply bg-white
 }
 
 ::-webkit-scrollbar-thumb {
@@ -110,6 +111,13 @@
     @apply bg-black
 }
 
+.ant-image-preview-operations-operation-flipY, .ant-image-preview-operations-operation-flipX, .ant-image-preview-operations-operation-rotateLeft, .ant-image-preview-operations-operation-rotateRight{
+    @apply hidden
+}
+
+.ant-image-preview-operations-progress{
+    @apply max-[500px]:left-[35px]
+}
 /* -- Components ------------------------------------------------------- */
 
 @layer components {
