refactor: fixed thumbnail size

--- a/src/app/(client)/globals.css
+++ b/src/app/(client)/globals.css
@@ -86,7 +86,7 @@
 
 .swiper-thumbs .swiper-slide{
 
-    @apply opacity-70 brightness-75 cursor-pointer
+    @apply opacity-70 brightness-[.90] cursor-pointer
 }
 .swiper-thumbs .swiper-slide-thumb-active{
 
