hotfix: set swiper-slide styles using !important since swiper overrides tailwind classes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,12 @@
   justify-content: center !important;
 }
 
+.swiperSlide {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
 .swiper-thumbs .swiper-slide {
   @apply opacity-70 brightness-[.90] cursor-pointer;
 }
