--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,11 +195,39 @@
   }
 
   .nav-item {
-    @apply font-semi-bold text-white hover:text-white-hover cursor-pointer text-[13.5px];
+    @apply font-semi-bold text-white cursor-pointer text-[13.5px];
+  }
+
+  .navlg {
+    @apply hidden min-[1220px]:flex text-center w-fit flex-row justify-start items-center h-16 flex-1 gap-10;
+  }
+
+  .navlg-categories {
+    @apply hidden group-hover:flex-row-center hover:flex-row-center -translate-y-full group-hover:translate-y-[152px] absolute left-0 text-center w-full py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black;
+  }
+
+  .navlg-categories-li {
+    @apply nav-item rounded-sm flex justify-center items-center relative w-fit h-fit;
+  }
+
+  .navlg-categories-img {
+    @apply object-cover h-full rounded-sm brightness-50 ease-in transition-all duration-700;
+  }
+
+  .navmd {
+    @apply bg-black w-screen lg:w-[400px] h-screen flex flex-col justify-start items-center py-16 space-y-10 absolute top-12 lg:top-[65px] left-0 transition-all duration-700;
   }
 
   .navmd-li {
-    @apply title-4 text-white border-grey-hover py-3 w-[80vw] md:w-[50vw] hover:text-white-hover cursor-pointer;
+    @apply title-4 text-white border-grey-hover py-3 w-[80vw] lg:w-[350px] md:w-[50vw] hover:text-white-hover cursor-pointer;
+  }
+
+  .navmd-li-collapse {
+    @apply space-y-10 overflow-hidden transition-all duration-200 ease-linear;
+  }
+
+  .navmd-li-collapse-span {
+    @apply flex-row-center border-y border-grey-hover text-center block border-b-0;
   }
 
   .second-image {
