--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,6 +174,8 @@
 /* -- Components ------------------------------------------------------- */
 
 @layer components {
+  /* Titles */
+
   .title-1 {
     @apply text-[29px] sm:text-3xl md:text-4xl lg:text-5xl uppercase tracking-[1vw] text-center font-extra-bold;
   }
@@ -193,6 +195,8 @@
   .subtitle-1 {
     @apply text-lg sm:text-xl uppercase font-bold;
   }
+
+  /* Nav */
 
   .nav-item {
     @apply font-semi-bold text-white cursor-pointer text-[13.5px];
@@ -230,16 +234,47 @@
     @apply flex-row-center border-y border-grey-hover text-center block border-b-0;
   }
 
+  /* Card */
+
+  .card-image {
+    @apply max-[370px]:w-[220px] w-[160px] md:w-[200px] lg:w-[280px] aspect-[3/2] overflow-hidden flex justify-center items-center;
+  }
   .second-image {
     transition: opacity 0.3s linear;
   }
 
-  .footer-icon {
-    @apply w-4 h-4 mr-3 fill-grey group-hover:fill-white;
+  /* Whatsapp */
+
+  .whatsapp-container {
+    @apply z-10 fixed bottom-7 left-7 flex flex-col justify-end items-start;
   }
 
-  .card-image {
-    @apply max-[370px]:w-[220px] w-[160px] md:w-[200px] lg:w-[280px] aspect-[3/2] overflow-hidden flex justify-center items-center;
+  .whatsapp-button {
+    @apply w-[50px] h-[50px] rounded-full bg-whatsapp flex items-center justify-center hover:scale-105 transition-all duration-100;
+  }
+  .whatsapp-dialog {
+    @apply w-[300px] h-[350px] shadow-lg rounded-lg my-5 flex-col-center overflow-hidden transition-all duration-300 ease-in-out;
+  }
+  .whatsapp-dialog-header {
+    @apply w-full h-16 bg-whatsapp flex justify-between items-center px-2;
+  }
+  .whatsapp-dialog-chat {
+    @apply flex flex-col flex-1 w-full justify-start items-start bg-white brightness-95;
+  }
+  .whatsapp-dialog-message {
+    @apply p-2 mx-2 my-4 bg-[#c1c1c1] rounded-lg rounded-tl-none text-black font-semi-bold text-xs w-[80%];
+  }
+  .whatsapp-dialog-bottom-bar {
+    @apply flex justify-between items-center w-full h-10 p-2 bg-white gap-3;
+  }
+  .whatsapp-dialog-text-input {
+    @apply flex flex-1 h-full border-none outline-none bg-transparent text-sm justify-center items-center;
+  }
+
+  /* Other */
+
+  .footer-icon {
+    @apply w-4 h-4 mr-3 fill-grey group-hover:fill-white;
   }
 
   .loader {
