--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -271,6 +271,36 @@
     @apply flex flex-1 h-full border-none outline-none bg-transparent text-sm justify-center items-center;
   }
 
+  /* Cart */
+
+  .cart {
+    @apply w-full h-screen bg-black-hover z-50 fixed top-0 left-0 flex justify-end items-start;
+  }
+
+  .cart-sheet {
+    @apply w-[400px] h-screen px-5 bg-white flex flex-col justify-center items-start;
+  }
+
+  .cart-sheet-header {
+    @apply w-full h-[65px] flex justify-between items-center border-b border-black;
+  }
+
+  .cart-sheet-ul {
+    @apply flex w-full flex-1 flex-col justify-start items-start;
+  }
+
+  .cart-sheet-li {
+    @apply my-5 flex justify-between items-center w-full h-16 h-fit;
+  }
+
+  .cart-sheet-img {
+    @apply w-[100px] aspect-square overflow-hidden flex justify-center items-center;
+  }
+
+  .cart-sheet-bottom {
+    @apply flex flex-col w-full justify-center items-center gap-5 py-5 border-t border-t-black;
+  }
+
   /* Other */
 
   .footer-icon {
