--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -273,12 +273,12 @@
 
   /* Cart */
 
-  .cart {
+  .veil {
     @apply w-full h-screen bg-black-hover z-50 fixed top-0 left-0 flex justify-end items-start;
   }
 
   .cart-sheet {
-    @apply w-[400px] h-screen px-5 bg-white flex flex-col justify-center items-start;
+    @apply z-[55] w-[400px] h-screen px-5 bg-white flex flex-col justify-center items-start fixed right-0 top-0;
   }
 
   .cart-sheet-header {
