--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,8 @@
   @apply left-0;
 }
 
+/* -- Image Preview -------------------------------------------------------------- */
+
 .ant-image-preview-operations {
   @apply bg-black;
 }
@@ -136,6 +138,8 @@
 .ant-image-preview-operations-progress {
   @apply max-[500px]:left-[35px];
 }
+
+/* -- Collapse -------------------------------------------------------------- */
 
 .ant-collapse {
   @apply w-[90vw] sm:w-[80vw] border-none bg-transparent rounded-none;
@@ -166,10 +170,52 @@
   place-items: center !important;
 }
 
-.MuiAutocomplete-listbox::-webkit-scrollbar-track,
+/* -- Select -------------------------------------------------------------- */
+
+.ant-select-selector,
+:where(.css-dev-only-do-not-override-14wwjjs).ant-select-single:not(
+    .ant-select-customize-input
+  )
+  .ant-select-selector {
+  border-radius: 0 !important;
+  border: 2px #0f0f0f solid !important;
+  height: 43px !important;
+}
+
+.ant-select-selection-item {
+  display: flex !important;
+  align-items: center !important;
+}
+
+.ant-select-dropdown,
+.ant-select-item.ant-select-item-option {
+  border-radius: 0 !important;
+  align-items: center !important;
+}
+
+.ant-select-item.ant-select-item-option {
+  align-items: center !important;
+}
+
+.ant-select-item.ant-select-item-option.ant-select-item-option-selected {
+  background-color: #0f0f0f2c !important;
+}
+
+.ant-select-selection-item {
+  font-weight: 500 !important;
+}
+
+/* -- Input Number -------------------------------------------------------------- */
+
+.ant-input-number-input {
+  padding: 0px !important;
+  text-align: center !important;
+}
+
+/* .MuiAutocomplete-listbox::-webkit-scrollbar-track,
 .MuiAutocomplete-listbox::-webkit-scrollbar-track-piece {
   background: transparent !important;
-}
+} */
 
 /* -- Components ------------------------------------------------------- */
 
@@ -207,7 +253,7 @@
   }
 
   .navlg-categories {
-    @apply hidden group-hover:flex-row-center hover:flex-row-center -translate-y-full group-hover:translate-y-[152px] absolute left-0 text-center w-full py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black;
+    @apply -z-20 absolute opacity-0 group-hover:opacity-100 flex-row-center -translate-y-full group-hover:translate-y-[152px] left-0 text-center w-screen py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black transition-all duration-300 ease-out;
   }
 
   .navlg-categories-li {
@@ -311,8 +357,16 @@
     animation: 1s loader linear infinite;
   }
 
+  .button-outline {
+    @apply flex-row-center text-sm lg:text-base w-full p-2 border-2 uppercase font-bold transition-all duration-200;
+  }
+
+  .button-solid {
+    @apply flex-row-center text-sm lg:text-base w-full p-2 bg-black text-white border-2 uppercase font-bold hover:bg-black-hover transition-all duration-200;
+  }
+
   .contact-button {
-    @apply flex-row-center text-sm lg:text-base w-full md:w-[49%] p-2 border-2 uppercase font-bold transition-all duration-200;
+    @apply button-outline md:w-[49%];
   }
 }
 
