--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -296,7 +296,7 @@
   }
 
   .whatsapp-button {
-    @apply w-[50px] h-[50px] rounded-full bg-whatsapp flex items-center justify-center hover:scale-105 transition-all duration-100;
+    @apply min-w-[50px] min-h-[50px] rounded-full bg-whatsapp flex items-center justify-center hover:scale-105 transition-all duration-100;
   }
   .whatsapp-dialog {
     @apply w-[300px] h-[350px] shadow-lg rounded-lg my-5 flex-col-center overflow-hidden transition-all duration-300 ease-in-out;
