--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -362,7 +362,7 @@
   }
 
   .button-solid {
-    @apply flex-row-center text-sm lg:text-base w-full p-2 bg-black text-white border-2 uppercase font-bold hover:bg-black-hover transition-all duration-200;
+    @apply flex-row-center text-sm lg:text-base w-full p-2 bg-black text-white border-2 border-black uppercase font-bold hover:bg-black-hover hover:border-transparent transition-all duration-200;
   }
 
   .contact-button {
