--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -245,7 +245,7 @@
   /* Nav */
 
   .nav-item {
-    @apply font-semi-bold text-white cursor-pointer text-[13.5px];
+    @apply font-semi-bold text-white cursor-pointer text-[13.5px] h-16;
   }
 
   .navlg {
@@ -253,7 +253,7 @@
   }
 
   .navlg-categories {
-    @apply -z-20 absolute opacity-0 group-hover:opacity-100 flex-row-center -translate-y-full group-hover:translate-y-[152px] left-0 text-center w-screen py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black transition-all duration-300 ease-out;
+    @apply -z-10 absolute opacity-0 group-hover:opacity-100 flex-row-center -translate-y-full group-hover:translate-y-[64px] top-0 left-0 text-center w-screen py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black transition-all duration-300 ease-out;
   }
 
   .navlg-categories-li {
@@ -265,7 +265,7 @@
   }
 
   .navmd {
-    @apply bg-black w-screen lg:w-[400px] h-screen flex flex-col justify-start items-center py-16 space-y-10 absolute top-12 lg:top-[65px] left-0 transition-all duration-700;
+    @apply bg-black w-screen lg:w-[400px] h-screen flex flex-col justify-start items-center py-16 space-y-10 absolute top-16 lg:top-[65px] left-0 transition-all duration-700;
   }
 
   .navmd-li {
@@ -283,10 +283,14 @@
   /* Card */
 
   .card-image {
-    @apply max-[370px]:w-[220px] w-[160px] md:w-[200px] lg:w-[280px] aspect-[3/2] overflow-hidden flex justify-center items-center;
+    @apply w-[80vw] min-[640px]:w-[25vw] min-[1080px]:w-[20vw] aspect-[3/2] overflow-hidden flex justify-center items-center;
   }
   .second-image {
     transition: opacity 0.3s linear;
+  }
+
+  .cards-container {
+    @apply grid grid-cols-1 gap-[70px] mb-20 min-[640px]:grid-cols-2 min-[1080px]:grid-cols-3 min-[640px]:gap-[2vw] justify-center;
   }
 
   /* Whatsapp */
@@ -382,6 +386,36 @@
   .flex-col-center {
     @apply flex flex-col justify-center items-center;
   }
+
+  .skeleton {
+    @apply relative overflow-hidden;
+  }
+}
+
+.skeleton {
+  animation: shimmer 2s linear infinite;
+}
+
+.skeleton::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: -100%;
+  z-index: -1;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.03) 20%,
+    rgba(255, 255, 255, 0.07) 50%,
+    rgba(255, 255, 255, 0.03) 80%,
+    rgba(255, 255, 255, 0)
+  );
+  animation-name: shimmer;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  content: "";
+  width: 60px;
 }
 
 @keyframes loader {
@@ -390,5 +424,15 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes shimmer {
+  0%,
+  100% {
+    opacity: 30%;
+  }
+  50% {
+    opacity: 100%;
   }
 }
