--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -235,7 +235,7 @@
   }
 
   .title-4 {
-    @apply text-[12px] sm:text-sm md:text-base uppercase font-extra-bold;
+    @apply text-[12px] sm:text-sm md:text-base uppercase font-bold;
   }
 
   .subtitle-1 {
