--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -310,7 +310,7 @@ textarea.ant-input {
   }
 
   .navlg-categories {
-    @apply -z-10 absolute opacity-0 group-hover:opacity-100 flex-row-center -translate-y-full group-hover:translate-y-[64px] top-0 left-0 text-center w-screen py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black transition-all duration-300 ease-out;
+    @apply z-[29] absolute flex-row-center top-0 left-0 text-center w-full h-fit py-7 space-x-5 border-t-[1.5px] border-grey-hover bg-black transition-all duration-300 ease-out;
   }
 
   .navlg-categories-li {
