--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -312,27 +312,11 @@
   /* Nav */
 
   .announcement-bar {
-    @apply fixed bg-dark-red h-7 w-full top-0 z-50 flex-row-center;
-  }
-
-  .announcement-bar-2 {
     @apply fixed bg-dark-red h-7 w-full top-16 z-[28] flex-row-center;
   }
 
-  .announcement-bar-3 {
-    @apply fixed bg-[#565353b3] h-7 w-full top-16 z-[28] flex-row-center backdrop-blur-lg;
-  }
-
-  .announcement-bar-4 {
-    @apply fixed bg-[#565353] h-7 w-full top-16 z-[28] flex-row-center backdrop-blur-lg;
-  }
-
-  .announcement-bar-5 {
-    @apply fixed bg-[#6d6969] h-7 w-full top-16 z-[28] flex-row-center backdrop-blur-lg;
-  }
-
-  .announcement-bar-6 {
-    @apply fixed bg-[#6d6969b3] h-7 w-full top-16 z-[28] flex-row-center backdrop-blur-lg;
+  .announcement-bar-2 {
+    @apply hidden min-[340px]:fixed bg-[#676767] h-6 md:h-7 w-full top-14 md:top-16 z-[28] flex-row-center;
   }
 
   .nav-item {
