styles: swiper styles break on production but work locally

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,10 @@
   }
 }
 
+.swiper.swiper-initialized.swiper-horizontal {
+  padding: 0 !important;
+}
+
 .swiper-thumbs .swiper-slide {
   @apply opacity-70 brightness-[.90] cursor-pointer;
 }
