styles: center ant design select label and chevron

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -217,6 +217,7 @@
   height: 43px !important;
 }
 
+.ant-select,
 .ant-select-selection-item {
   display: flex !important;
   align-items: center !important;
